# HoloMenu

./: .gitignore  ARCHITECTURE.md  CURRENT_STATE_REPORT.md  HoloMenu_SaaS_10_Readiness_Plan.md  README.md  admin.html  alembic.ini  app.js  cashier.html  chef.html  config.json  events.js  gesture_engine.py  holomenu_db.sql  implementation_plan_to_improve_the_rate_of_saas.md  index.html  login.html  nav.css  nav.js  portal.html  products.json  run_project.bat  style.css
assets/js/: api-client.js  engine-status-hud.js  websocket-client.js
backend/: .env.example  ARCHITECTURE.md  main.py  requirements.txt
backend/application/: __init__.py
backend/domain/: __init__.py  order_rules.py
backend/infrastructure/: __init__.py
backend/interface/: __init__.py  dependencies.py
backend/scripts/: purge_tenants.py
backend/tests/: conftest.py  test_auth_rbac.py  test_auth_token_lifecycle.py  test_order_lifecycle.py  test_stripe_billing.py  test_tenant_isolation.py  test_tenant_offboarding.py  test_websocket_pairing.py
baseline/: responses.json
gesture_engine/: __init__.py  main.py  state.py
gesture_engine/config/: settings.py
gesture_engine/transport/: commands.py  websocket_server.py
gesture_engine/vision/: camera.py  gesture_classifier.py  hand_landmarker.py
logs/: holomenu.jsonl
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_multi_tenancy.py  (+8 more)
scripts/: capture_baseline.py  capture_gesture_baseline.py  rebuild_bootstrap_sql.py  setup_mysql_user.py  verify_schema_sync.py
src-tauri/: Cargo.toml  tauri.conf.json
(+40 files in other folders)
